Fix reference image cache update conditions

BUG: 397208